--- a/.github/workflows/infraworkflow.yml
+++ b/.github/workflows/infraworkflow.yml
@@ -1,17 +1,18 @@
 name: Create Azure Resources
 on: 
     push:
+        workflow_dispatch:
         paths: 
         - 'ARM/**'
         - '.github/workflows/infraworkflow.yml'
 
 env:
     AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID  }}    # set this to your Azure Subscription Id
-    AZURE_RESOURCEGROUP_NAME: demo-webappsql-gh-actions                      # set this to your preferred resource group name
-    AZURE_WEBAPP_NAME: demo-webappsql-gh-actions-unique                          # set this to your preferred web app name
-    ASP_NAME: demo-webappsql-gh-actions
-    SQLSERVER_NAME: demo-webappsql-gh-actions-srv                          # set this to your preferred sql server name
-    DATABASE_NAME: demo-webappsql-gh-actions-db                   # set this to your preferred sql database name
+    AZURE_RESOURCEGROUP_NAME: ContosoSample3-RG                      # set this to your preferred resource group name
+    AZURE_WEBAPP_NAME: DevMCLPD1svr                          # set this to your preferred web app name
+    ASP_NAME:  DevMCLPD1asp
+    SQLSERVER_NAME:  DevMCLPD1SQLsvr                          # set this to your preferred sql server name
+    DATABASE_NAME:  DevMCLPD1db                   # set this to your preferred sql database name
     SQLADMIN_LOGIN: ${{ secrets.SQLADMIN_LOGIN  }}                # Create a secret in your Github repo for the SQL Admin login name you want to use
     SQLADMIN_PASS: ${{ secrets.SQLADMIN_PASS  }}                 # Create a secret in your Github repo for the SQL Admin password you want to use
 
@@ -28,9 +29,11 @@ jobs:
       - name: Azure Login with Federated Identity
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+#          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+#          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+#          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       
       # Checkout
       - name: Checkout
