--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,7 @@
 name: Build and deploy app
 
 on:
+  workflow_dispatch:
   push
 
 # CONFIGURATION
@@ -11,12 +12,12 @@ on:
 #
 # 2. Change these variables for your configuration:
 env:
-  AZURE_WEBAPP_NAME: demo-webappsql-gh-actions-unique    # set this to your application's name
+  AZURE_WEBAPP_NAME: DevMCLPD1svr                              # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '3.1'           # set this to the dot net version to use
-  AZURE_RESOURCEGROUP_NAME: demo-webappsql-gh-actions # set this to your preferred resource group name
-  SQLSERVER_NAME: demo-webappsql-gh-actions-srv                          # set this to your preferred sql server name
-  DATABASE_NAME: demo-webappsql-gh-actions-db                   # set this to your preferred sql database name
+  AZURE_RESOURCEGROUP_NAME: ContosoSample3-RG # set this to your preferred resource group name
+  SQLSERVER_NAME: devmclpd1sqlsvr                          # set this to your preferred sql server name
+  DATABASE_NAME: devmclpd1db                   # set this to your preferred sql database name
   SQLADMIN_LOGIN: ${{ secrets.SQLADMIN_LOGIN  }}                # Create a secret in your Github repo for the SQL Admin login name you want to use
   SQLADMIN_PASS: ${{ secrets.SQLADMIN_PASS  }}                 # Create a secret in your Github repo for the SQL Admin password you want to use
   
