--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,7 +14,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: DevMCLPD1svr                              # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '3.1'           # set this to the dot net version to use
+  DOTNET_VERSION: '5.0.x'           # set this to the dot net version to use
   AZURE_RESOURCEGROUP_NAME: ContosoSample3-RG # set this to your preferred resource group name
   SQLSERVER_NAME: devmclpd1sqlsvr                          # set this to your preferred sql server name
   DATABASE_NAME: devmclpd1db                   # set this to your preferred sql database name
